--- a/views/products/home.ejs
+++ b/views/products/home.ejs
@@ -18,7 +18,7 @@
                         electric scooters, solar and integrated renewable energy solutions for homes and businesses
                     </div>
                     <!-- </div> -->
-                    <div class="btn btn-success">Contact Us!</div>
+                    <a href="https://www.facebook.com/vjeetscooter/">  <div class="btn btn-success">    Contact Us! </div></a>
                 </div>
             </div>
 
