--- a/views/products/show.ejs
+++ b/views/products/show.ejs
@@ -638,7 +638,7 @@
                         </h5>
                         <div> Rating: <span style="color: #ff9c1a;letter-spacing: 3px;"> <%-
                                     getStarIcons(eachReview.rating) %> </span> </div>
-                        <p class="card-text"> Comments <%=eachReview.body%>
+                        <p class="card-text"> Comments: <%=eachReview.body%>
                         </p>
                     </div>
                     <%}%>
