--- a/public/css/app.css
+++ b/public/css/app.css
@@ -962,17 +962,93 @@ body {
 
 @media (max-width: 576px) {
 
-/* not working */
+/*************  HOME PAGE  ************/
+/* Hero page */
+.homepage-hero .body {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    text-align: center;
+    background: rgba(0, 0, 0, 0);
+    /* You can adjust the background color and opacity */
+    color: black;
+    /* Text color */
+    padding: 5px;
+    /* Add padding to the text */
+    box-sizing: border-box;
+}
+
+
+.homepage-hero .body .brand {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    height: 50%;
+}
+
 .homepage-hero .body .text {
-    font-style: italic;
-    font-size: 15px !important;
-    color:#ff9c1a
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 40%;
+    width: 80%;
+    text-align: left;
+}
+
+.homepage-hero .body .text .title {
+    font-size: 20px;
+    padding-bottom: 15px;
+}
+
+.homepage-hero .body .text .description {
+    width: 80%;
+    font-size: 10px;
+}
+
+.homepage-hero .body .text .btn {
+    margin-top: 10px;
+    /* width: 10px;
+    height: 50%; */
+
+    width: 40%;
+
+    white-space: nowrap;
+    font-size: 10px;
+    font-weight: bold;
+    text-align: center;
+    
 }
 
 
+/* Products */
+.homepage-products-preview .m-1{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    padding-bottom: 10%; /* Adjust the percentage as needed */
+
+    &::before {
+        content: "";
+        width: 80%; /* Adjust the width as needed */
+        height: 1px; /* Border height */
+        background-color: gray; /* Border color */
+        position: absolute;
+        bottom: 0;
+    }
+}
 
 
 }
+
+
 
 
 @media (max-width: 768px) {
