--- a/views/products/mukuta10dual.ejs
+++ b/views/products/mukuta10dual.ejs
@@ -1,2 +1,169 @@
 <% layout('layouts/boilerplate.ejs') %>
-<h1><%=product.name %></h1>
+    <!-- <h1 style="text-align: center;">MUKUTA 9 PLUS ELECTRIC SCOOTER</h1> -->
+
+    <!-- Carousel and Description table -->
+    <div class="container product-details-first-section">
+        <div class="row">
+            <div class="col col-md-6 " id="product-details-section-one-a">
+                <section class="product-details-carousel">
+                    <div class="slider-for">
+                        <div><img style="width: 400px;"
+                                src="https://res.cloudinary.com/dashjv0yt/image/upload/v1696000515/VetStore/products-lists/mukuta10dualelectic/211A8571_80a9a78c-f03e-4aa2-b9ca-0d127c684ede_ozwijy.png"
+                                alt=""></div>
+                        <div><img style="width: 400px;"
+                                src="https://res.cloudinary.com/dashjv0yt/image/upload/v1696000514/VetStore/products-lists/mukuta10dualelectic/211A8586_wndxsm.png"
+                                alt=""></div>
+                        <div><img
+                                src="https://res.cloudinary.com/dashjv0yt/image/upload/v1696000513/VetStore/products-lists/mukuta10dualelectic/211A8663_q2zl3b.png"
+                                alt=""></div>
+                        <div><img
+                                src="https://res.cloudinary.com/dashjv0yt/image/upload/v1696000516/VetStore/products-lists/mukuta10dualelectic/211A8604_jbtxr2.png"
+                                alt=""></div>
+
+                        <div><img
+                                src="https://res.cloudinary.com/dashjv0yt/image/upload/v1696000515/VetStore/products-lists/mukuta10dualelectic/211A8607_wvbrgr.png"
+                                alt=""></div>
+                        <div><img
+                                src="https://res.cloudinary.com/dashjv0yt/image/upload/v1696000515/VetStore/products-lists/mukuta10dualelectic/211A8737_qb1rlo.png"
+                                alt=""></div>
+
+                    </div>
+
+                    <div class="slider-nav">
+                        <div><img
+                            src="https://res.cloudinary.com/dashjv0yt/image/upload/v1696000515/VetStore/products-lists/mukuta10dualelectic/211A8571_80a9a78c-f03e-4aa2-b9ca-0d127c684ede_ozwijy.png"
+                            alt=""></div>
+                    <div><img  
+                            src="https://res.cloudinary.com/dashjv0yt/image/upload/v1696000514/VetStore/products-lists/mukuta10dualelectic/211A8586_wndxsm.png"
+                            alt=""></div>
+                    <div><img
+                            src="https://res.cloudinary.com/dashjv0yt/image/upload/v1696000513/VetStore/products-lists/mukuta10dualelectic/211A8663_q2zl3b.png"
+                            alt=""></div>
+                    <div><img
+                            src="https://res.cloudinary.com/dashjv0yt/image/upload/v1696000516/VetStore/products-lists/mukuta10dualelectic/211A8604_jbtxr2.png"
+                            alt=""></div>
+
+                    <div><img
+                            src="https://res.cloudinary.com/dashjv0yt/image/upload/v1696000515/VetStore/products-lists/mukuta10dualelectic/211A8607_wvbrgr.png"
+                            alt=""></div>
+                    <div><img
+                            src="https://res.cloudinary.com/dashjv0yt/image/upload/v1696000515/VetStore/products-lists/mukuta10dualelectic/211A8737_qb1rlo.png"
+                            alt=""></div>
+
+                    </div>
+                </section>
+            </div>
+
+
+
+            <div class="col col-md-6 " id="product-details-section-one-b">
+
+                <section class="product-details-description">
+                    <p class="product-name"> MUKUTA 10 DUAL ELECTRIC SCOOTER
+
+                    </p>
+                    <p class="product-description">
+                        The Mukuta 9 Plus versatile scooter expands the range of new Mukuta models for the 2023
+                        season.
+                        It is full of practical gadgets for daily use, yet upgraded with extra performance, comfort
+                        and
+                        safety. That is why the Mukuta 9 Plus has made such a grant entrance to the category of
+                        excellently equipped road scooters.
+                    </p>
+                    <table>
+                        <!-- <tr>
+                            <td colspan="2"><h2>Product details</h2></td>
+                        <tr> -->
+                        <td>Product Name</td>
+                        <td>Mukuta 9 Plus</td>
+                        </tr>
+                        <tr>
+                            <td>Battery Capacity </td>
+                            <td>48V 15.6AH </td>
+                        </tr>
+
+                        <tr>
+                            <td>Motor</td>
+                            <td>48V 800Wx2 Brushless Motors</td>
+                        </tr>
+                        <tr>
+                            <td>Mileage</td>
+                            <td>70KM</td>
+                        </tr>
+                        <tr>
+                            <td>Max Speed</td>
+                            <td>48KMH</td>
+                        </tr>
+                        <tr>
+                            <td>DISPLAY</td>
+                            <td>LED Display</td>
+                        </tr>
+                        <tr>
+                            <td>WEIGHT</td>
+                            <td>33KG</td>
+                        </tr>
+                        <tr>
+                            <td>SUSPENSION</td>
+                            <td>Adjustable Twist Suspension</td>
+                        </tr>
+                        <tr>
+                            <td>TIRE</td>
+                            <td>9 Inch Puncture-Proof Tubeless Tires</td>
+                        </tr>
+                        <tr>
+                            <td>MAX LOAD</td>
+                            <td>120KG</td>
+                        </tr>
+                        <tr>
+
+
+                    </table>
+
+
+                </section>
+            </div>
+        </div>
+
+
+    </div>
+
+
+    <!-- Testing icons for features from maxblinker -->
+    <section style="background-color: white; display: flex; justify-content: center;">
+        <img src="https://res.cloudinary.com/dashjv0yt/image/upload/v1696143196/VetStore/products-lists/mukuta9plus/mukuta-icons-description_zyyd3c.png"
+            alt="">
+    </section>
+
+
+    <!-- Write a review button to open form modal -->
+    <!-- Form modal -->
+    <%- include('../partials/reviewform.ejs') %>
+
+        <div class="container">
+
+
+            <div class="product-details-write-reviews">
+                <h1>Reviews</h1>
+                <button class="btn-success" id="write-review-btn">Write a review</button>
+            </div>
+
+
+
+            <!-- View all reviews submitted by users -->
+            <section class="product-details-view-reviews">
+
+                <% for(let eachReview of product.reviews){%>
+
+                    <div class="card" ">
+        <img src="" class=" card-img-top" alt="">
+                        <div class="card-body">
+                            <h5 class="card-title">Name: <%=eachReview.name%>
+                            </h5>
+                            <div> Rating: <span style="color: #ff9c1a;letter-spacing: 3px;"> <%-
+                                        getStarIcons(eachReview.rating) %> </span> </div>
+                            <p class="card-text"> Comments: <%=eachReview.body%>
+                            </p>
+                        </div>
+                        <%}%>
+            </section>
+        </div>
