--- a/views/products/mukuta9plus.ejs
+++ b/views/products/mukuta9plus.ejs
@@ -7,10 +7,10 @@
             <div class="col col-md-6 " id="product-details-section-one-a">
                 <section class="product-details-carousel">
                     <div class="slider-for">
-                        <div><img
+                        <div><img style="width: 400px;"
                                 src="https://res.cloudinary.com/dashjv0yt/image/upload/v1696000522/VetStore/products-lists/mukuta9plus/MUKUTA9Plus_3_1_kvc1ik.png"
                                 alt=""></div>
-                        <div><img
+                        <div><img style="width: 400px;"
                                 src="https://res.cloudinary.com/dashjv0yt/image/upload/v1696000519/VetStore/products-lists/mukuta9plus/IMGL7193_jaazju.png"
                                 alt=""></div>
                         <div><img
