--- a/views/products/home.ejs
+++ b/views/products/home.ejs
@@ -19,7 +19,9 @@
                     </div>
                     <!-- </div> -->
                     <a href="https://www.facebook.com/vjeetscooter/">
-                        <div class="btn btn-success"> Contact Us!</div>
+                        <div class="btn btn-success"> Contact Us!
+
+                        </div>
                     </a>
                 </div>
             </div>
@@ -96,24 +98,24 @@
         <div class="container">
             <div class="row">
 
-                <div class="col-2">
+                <div class="col-4">
                     <img src="https://logos-world.net/wp-content/uploads/2021/04/Maserati-Logo-2020-present.png" alt="">
                 </div>
-                <div class="col-2">
+                <div class="col-4">
                     <img src="https://clipground.com/images/ferrari-500-clipart-7.jpg" alt="">
                 </div>
-                <div class="col-2">
+                <div class="col-4">
                     <img src="https://purepng.com/public/uploads/medium/purepng.com-bentley-motors-logobentleybentley-motorsbritishmanufacturerluxury-carsloho-1701527414239tayyn.png"
                         alt="">
                 </div>
-                <div class="col-2">
+                <div class="col-4">
                     <img src="https://www.jaggaer.com/app/uploads/2020/10/rolls-royce-logo.png" alt="">
                 </div>
-                <div class="col-2">
+                <div class="col-4">
                     <img src="https://th.bing.com/th/id/R.d9a06e6af0ad0b383f7eeddaf38334e4?rik=GV5Kk8fVPukT0g&pid=ImgRaw&r=0"
                         alt="">
                 </div>
-                <div class="col-2">
+                <div class="col-4">
                     <img src="https://pngimg.com/uploads/tesla_logo/tesla_logo_PNG7.png" alt="">
                 </div>
             </div>
@@ -207,27 +209,12 @@
 
 
 
-    <!-- <section class="homepage-partners-slick-carousel">
-        <div class="slick-carousel-partners">
-            <div>
-                <img src="https://pngimg.com/uploads/tesla_logo/tesla_logo_PNG7.png" alt="" />
-            </div>
-            <div>
-                <img src="https://pngimg.com/uploads/tesla_logo/tesla_logo_PNG7.png" alt="" />
-            </div>
-            <div>
-                <img src="https://pngimg.com/uploads/tesla_logo/tesla_logo_PNG7.png" alt="" />
-            </div>
-            <div>
-                <img src="https://pngimg.com/uploads/tesla_logo/tesla_logo_PNG7.png" alt="" />
-            </div>
-        </div>
-    </section> -->
+
 
 
     <section class="homepage-customer-reviews">
         <div class="title">Featured Reviews</div>
-        <div class="slick-carousel">
+        <div class="slick-carousel-customer-reviews">
             <!-- Inside the containing div, add one div for each slide -->
             <div class="item">
                 <!-- You can put an image or text inside each slide div -->
