--- a/views/products/mukuta10single.ejs
+++ b/views/products/mukuta10single.ejs
@@ -1,5 +1,5 @@
 <% layout('layouts/boilerplate.ejs') %>
-    <!-- <h1 style="text-align: center;">MUKUTA 9 PLUS ELECTRIC SCOOTER</h1> -->
+    <!-- <h1 style="text-align: center;">MUKUTA 10 SINGLE ELECTRIC SCOOTER</h1> -->
 
     <!-- Carousel and Description table -->
     <div class="container product-details-first-section">
