--- a/views/products/show.ejs
+++ b/views/products/show.ejs
@@ -102,7 +102,7 @@
     <section class="product-details-collage">
         <div class="container">
             <div class="row" id="row1">
-                <div class="col-6">
+                <div class="col-md-6">
                     <div class="image-container">
                         <img class="img-fluid"
                             src="https://www.mukutariding.com/cdn/shop/files/4.jpg?v=1676356266&width=750" alt="">
@@ -113,7 +113,7 @@
                     </div>
                 </div>
 
-                <div class="col-6">
+                <div class="col-md-6">
                     <div class="image-container">
                         <img class="img-fluid"
                             src="https://www.mukutariding.com/cdn/shop/files/5_3.jpg?v=1676354869&width=1000" alt="">
@@ -127,7 +127,7 @@
         </div>
         <div class="container">
             <div class="row" id="row2">
-                <div class="col-4">
+                <div class="col-md-4">
                     <div class="image-container">
                         <img class="img-fluid"
                             src="https://www.mukutariding.com/cdn/shop/files/1_1.jpg?v=1676354819&width=750" alt="">
@@ -139,7 +139,7 @@
 
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-md-4">
                     <div class="image-container">
                         <img class="img-fluid"
                             src="https://www.mukutariding.com/cdn/shop/files/3_3.jpg?v=1676354858&width=1000" alt="">
@@ -147,7 +147,7 @@
                     </div>
 
                 </div>
-                <div class="col-4">
+                <div class="col-md-4">
                     <div class="image-container">
                         <img class="img-fluid"
                             src="https://www.mukutariding.com/cdn/shop/files/5_2.jpg?v=1676354869&width=1000" alt="">
