--- a/public/css/app.css
+++ b/public/css/app.css
@@ -307,7 +307,7 @@ body {
 
 /* Slick carousel */
 /* Defines the width of the carousel and centers it on the page */
-.homepage-customer-reviews .slick-carousel {
+.homepage-customer-reviews .slick-carousel-customer-reviews {
     margin: 0 auto;
     width: 90%;
 }
@@ -957,6 +957,25 @@ body {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /*************  RESPONSIVE DESIGN ************/
 
 
@@ -968,7 +987,7 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    width: 50%;
+    width: 60%;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -1026,7 +1045,7 @@ body {
 }
 
 
-/* Products */
+/* Products list */
 .homepage-products-preview .m-1{
     display: flex;
     flex-direction: column;
@@ -1037,12 +1056,25 @@ body {
 
     &::before {
         content: "";
-        width: 80%; /* Adjust the width as needed */
+        width: 50%; /* Adjust the width as needed */
         height: 1px; /* Border height */
         background-color: gray; /* Border color */
         position: absolute;
         bottom: 0;
     }
+}
+
+
+/*************  Product details  ************/
+
+/* Show.ejs (mkt10plus)  */
+
+.product-details-collage .col-md-6{
+    margin-top: 20px ;
+}
+
+.product-details-collage .col-md-4{
+    margin-bottom: 20px ;
 }
 
 
