--- a/views/products/mukuta9.ejs
+++ b/views/products/mukuta9.ejs
@@ -1,7 +1,7 @@
 
 
 <% layout('layouts/boilerplate.ejs') %>
-    <!-- <h1 style="text-align: center;">MUKUTA 9 PLUS ELECTRIC SCOOTER</h1> -->
+    <h1 style="text-align: center;">MUKUTA 9 ELECTRIC SCOOTER</h1>
 
     <!-- Carousel and Description table -->
     <div class="container product-details-first-section">
