--- a/views/products/products.ejs
+++ b/views/products/products.ejs
@@ -80,7 +80,7 @@
         <div class="row text-center ">
             <% for (let eachProduct of products){ %>
 
-                <div class="col-6 col-sm-6 col-md-4 col-lg-3 mb-5">
+                <div class="col-12 col-md-4 col-lg-3 mb-5">
 
 
                     <div class="card m-1 " style="width: auto; height: 100%;">
