--- a/views/products/home.ejs
+++ b/views/products/home.ejs
@@ -15,7 +15,7 @@
                 <div class="text">
                     <div class="title">Vietnam's #1 Electric Scooters Distributor</div>
                     <div class="description"> We are accelerating the world's transition to sustainable energy with
-                        electric scooters, solar and integrated renewable energy solutions for homes and businesses
+                        electric scooters for homes and businesses
                     </div>
                     <!-- </div> -->
                     <a href="https://www.facebook.com/vjeetscooter/">
