--- a/views/products/home.ejs
+++ b/views/products/home.ejs
@@ -98,24 +98,24 @@
         <div class="container">
             <div class="row">
 
-                <div class="col-4">
+                <div class="col-4 col-md-2">
                     <img src="https://logos-world.net/wp-content/uploads/2021/04/Maserati-Logo-2020-present.png" alt="">
                 </div>
-                <div class="col-4">
+                <div class="col-4 col-md-2">
                     <img src="https://clipground.com/images/ferrari-500-clipart-7.jpg" alt="">
                 </div>
-                <div class="col-4">
+                <div class="col-4 col-md-2">
                     <img src="https://purepng.com/public/uploads/medium/purepng.com-bentley-motors-logobentleybentley-motorsbritishmanufacturerluxury-carsloho-1701527414239tayyn.png"
                         alt="">
                 </div>
-                <div class="col-4">
+                <div class="col-4 col-md-2">
                     <img src="https://www.jaggaer.com/app/uploads/2020/10/rolls-royce-logo.png" alt="">
                 </div>
-                <div class="col-4">
+                <div class="col-4 col-md-2">
                     <img src="https://th.bing.com/th/id/R.d9a06e6af0ad0b383f7eeddaf38334e4?rik=GV5Kk8fVPukT0g&pid=ImgRaw&r=0"
                         alt="">
                 </div>
-                <div class="col-4">
+                <div class="col-4 col-md-2">
                     <img src="https://pngimg.com/uploads/tesla_logo/tesla_logo_PNG7.png" alt="">
                 </div>
             </div>
