--- a/public/css/app.css
+++ b/public/css/app.css
@@ -979,6 +979,76 @@ body {
 /*************  RESPONSIVE DESIGN ************/
 
 
+@media (max-width: 410px) {
+
+    /* Hero page */
+    .homepage-hero .body {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 60%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+        text-align: center;
+        background: rgba(0, 0, 0, 0);
+        /* You can adjust the background color and opacity */
+        color: black;
+        /* Text color */
+        padding: 5px;
+        /* Add padding to the text */
+        box-sizing: border-box;
+    }
+
+
+    .homepage-hero .body .brand {
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
+        height: 50%;
+        color: orange;
+    }
+
+    .homepage-hero .body .text {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        height: 40%;
+        width: 80%;
+        text-align: left;
+    }
+
+    .homepage-hero .body .text .title {
+        font-size: 15px;
+        padding-bottom: 15px;
+    }
+
+    .homepage-hero .body .text .description {
+        width: 80%;
+        font-size: 5px;
+    }
+
+    .homepage-hero .body .text .btn {
+        margin-top: 10px;
+        /* width: 10px;
+        height: 50%; */
+
+        width: 40%;
+
+        white-space: nowrap;
+        font-size: 10px;
+        font-weight: bold;
+        text-align: center;
+
+    }
+
+}
+
+
+
+
 @media (max-width: 640px) {
 
     /*************  HOME PAGE  ************/
@@ -1117,7 +1187,7 @@ body {
     }
 
 
-    #product-details-section-one-b{
+    #product-details-section-one-b {
         padding-top: 30px
     }
 
