--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -40,6 +40,12 @@
 
 
         <%- body %>
+            <!-- Messenger Chat Plugin Code -->
+            <div id="fb-root"></div>
+
+            <!-- Your Chat Plugin code -->
+            <div id="fb-customer-chat" class="fb-customerchat">
+            </div>
 
 
 
@@ -48,49 +54,77 @@
 
 
 
-
-                <%- include('../partials/footer.ejs') %>
-
+            <%- include('../partials/footer.ejs') %>
 
 
 
-                    <!-- SCRIPTS -->
 
-                    <!-- Bootstrap -->
-                    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-                        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-                        crossorigin="anonymous"></script>
+                <!-- SCRIPTS -->
 
-                    <!-- JQuery -->
-                    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-                    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+                <!-- Bootstrap -->
+                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+                    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+                    crossorigin="anonymous"></script>
 
-                    <!-- Owl carousel -->
-                    <script
-                        src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+                <!-- JQuery -->
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+                <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 
-                    <!-- Slick carousel -->
-                    <script type="text/javascript"
-                        src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+                <!-- Owl carousel -->
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 
-
-                    <!-- My Custom JS -->
-                    <script src="/js/app.js"></script>
+                <!-- Slick carousel -->
+                <script type="text/javascript"
+                    src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
 
-                    <script>
+                <!-- My Custom JS -->
+                <script src="/js/app.js"></script>
 
-                        $('.slick-carousel').slick({
-                            infinite: true,
-                            slidesToShow: 5,
-                            slidesToScroll: 1,
-                            arrows: true,
-                            dots: false,
-                            autoplay: false,
+
+                <!-- Facebook chat plug-in -->
+
+                <script>
+                    var chatbox = document.getElementById('fb-customer-chat');
+                    chatbox.setAttribute("page_id", "101672412008860");
+                    chatbox.setAttribute("attribution", "biz_inbox");
+                </script>
+
+                <!-- Your SDK code -->
+                <script>
+                    window.fbAsyncInit = function () {
+                        FB.init({
+                            xfbml: true,
+                            version: 'v18.0'
                         });
+                    };
+
+                    (function (d, s, id) {
+                        var js, fjs = d.getElementsByTagName(s)[0];
+                        if (d.getElementById(id)) return;
+                        js = d.createElement(s); js.id = id;
+                        js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+                        fjs.parentNode.insertBefore(js, fjs);
+                    }(document, 'script', 'facebook-jssdk'));
+                </script>
 
 
-                    </script>
+
+
+
+                <script>
+
+                    $('.slick-carousel').slick({
+                        infinite: true,
+                        slidesToShow: 5,
+                        slidesToScroll: 1,
+                        arrows: true,
+                        dots: false,
+                        autoplay: false,
+                    });
+
+
+                </script>
 
 
 </body>
