--- a/public/css/app.css
+++ b/public/css/app.css
@@ -986,7 +986,7 @@ body {
         position: absolute;
         top: 0;
         left: 0;
-        width: 60%;
+        width: 70% !important;
         height: 100%;
         display: flex;
         flex-direction: column;
@@ -994,7 +994,6 @@ body {
         justify-content: space-evenly;
         text-align: center;
         background: rgba(0, 0, 0, 0);
-        /* You can adjust the background color and opacity */
         color: black;
         /* Text color */
         padding: 5px;
@@ -1003,37 +1002,28 @@ body {
     }
 
 
-    .homepage-hero .body .brand {
-        display: flex;
-        flex-direction: column;
-        justify-content: start;
-        height: 50%;
-        color: orange;
-    }
-
     .homepage-hero .body .text {
         display: flex;
         flex-direction: column;
         justify-content: space-around;
-        height: 40%;
-        width: 80%;
+        height: 100%;
+        width: 90%;
         text-align: left;
     }
 
     .homepage-hero .body .text .title {
-        font-size: 15px;
-        padding-bottom: 15px;
+        font-size: 18px !important;
+        padding-bottom: 8px !important;
+
     }
 
     .homepage-hero .body .text .description {
         width: 80%;
-        font-size: 5px;
+        font-size: 10px !important;
     }
 
     .homepage-hero .body .text .btn {
         margin-top: 10px;
-        /* width: 10px;
-        height: 50%; */
 
         width: 40%;
 
