--- a/views/products/mukuta10dual.ejs
+++ b/views/products/mukuta10dual.ejs
@@ -55,7 +55,6 @@
             </div>
 
 
-
             <div class="col col-md-6 " id="product-details-section-one-b">
 
                 <section class="product-details-description">
@@ -129,10 +128,10 @@
 
 
     <!-- Testing icons for features from maxblinker -->
-    <section style="background-color: white; display: flex; justify-content: center;">
+    <!-- <section style="background-color: white; display: flex; justify-content: center;">
         <img src="https://res.cloudinary.com/dashjv0yt/image/upload/v1696143196/VetStore/products-lists/mukuta9plus/mukuta-icons-description_zyyd3c.png"
             alt="">
-    </section>
+    </section> -->
 
 
     <!-- Write a review button to open form modal -->
