--- a/views/products/mukuta9plus.ejs
+++ b/views/products/mukuta9plus.ejs
@@ -128,10 +128,10 @@
 
 
     <!-- Testing icons for features from maxblinker -->
-    <section style="background-color: white; display: flex; justify-content: center;">
+    <!-- <section style="background-color: white; display: flex; justify-content: center;">
         <img src="https://res.cloudinary.com/dashjv0yt/image/upload/v1696143196/VetStore/products-lists/mukuta9plus/mukuta-icons-description_zyyd3c.png"
             alt="">
-    </section>
+    </section> -->
 
 
     <!-- Write a review button to open form modal -->
